tests/ui/lint/snapshots/unconditional_recursion_generic_function.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Unconditional recursion
   ╭─[test.lis:3:3]
 2 │ fn echo<T>(value: T) -> T {
 3 │   echo(value)
   ·   ─────┬─────
   ·        ╰── recurses on every path
 4 │ }
   ╰────
  help: `echo` always calls itself, so it overflows the stack instead of returning. Add a base case that returns without recursing · code: [lint.unconditional_recursion]
