tests/ui/lint/snapshots/unconditional_recursion_self_call_in_argument.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Unconditional recursion
   ╭─[test.lis:7:10]
 6 │ fn wrap(n: int) -> int {
 7 │   double(wrap(n - 1))
   ·          ─────┬─────
   ·               ╰── recurses on every path
 8 │ }
   ╰────
  help: `wrap` always calls itself, so it overflows the stack instead of returning. Add a base case that returns without recursing · code: [lint.unconditional_recursion]
