tests/ui/lint/snapshots/unconditional_recursion_self_call_in_if_condition.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Unconditional recursion
   ╭─[test.lis:3:6]
 2 │ fn probe(n: int) -> int {
 3 │   if probe(n - 1) > 0 {
   ·      ──────┬─────
   ·            ╰── recurses on every path
 4 │     return 1
   ╰────
  help: `probe` always calls itself, so it overflows the stack instead of returning. Add a base case that returns without recursing · code: [lint.unconditional_recursion]
