tests/ui/lint/snapshots/unconditional_recursion_self_call_in_operand.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Unconditional recursion
   ╭─[test.lis:3:3]
 2 │ fn accumulate(n: int) -> int {
 3 │   accumulate(n - 1) + 1
   ·   ────────┬────────
   ·           ╰── recurses on every path
 4 │ }
   ╰────
  help: `accumulate` always calls itself, so it overflows the stack instead of returning. Add a base case that returns without recursing · code: [lint.unconditional_recursion]
