tests/ui/lint/snapshots/unconditional_recursion_self_call_in_task_argument.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Unconditional recursion
   ╭─[test.lis:8:16]
 7 │ fn spawn_wrap(n: int) -> int {
 8 │   task consume(spawn_wrap(n))
   ·                ──────┬──────
   ·                      ╰── recurses on every path
 9 │   0
   ╰────
  help: `spawn_wrap` always calls itself, so it overflows the stack instead of returning. Add a base case that returns without recursing · code: [lint.unconditional_recursion]
